[WIP] Merge FlutterApp and RNApp (Android)

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
+rootProject.name = 'RNFlutterApp'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
